<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvisingAppointment">

    <TextView
        android:id="@+id/apptDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/dayButton"
        app:layout_constraintStart_toStartOf="@+id/dayButton"
        app:layout_constraintTop_toBottomOf="@+id/selectedDay" />

    <TextView
        android:id="@+id/selectedDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_day"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/dayButton"
        app:layout_constraintStart_toStartOf="@+id/dayButton"
        app:layout_constraintTop_toBottomOf="@+id/dayButton" />

    <Button
        android:id="@+id/requestButton"
        android:layout_width="298dp"
        android:layout_height="53dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/advising_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="729dp"
        android:layout_height="1dp"
        android:layout_marginTop="52dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advising_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/advising_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advising_day"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toTopOf="@+id/textTime" />

    <Button
        android:id="@+id/dayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_day"
        app:layout_constraintEnd_toEndOf="@+id/textDays"
        app:layout_constraintStart_toStartOf="@+id/textDays"
        app:layout_constraintTop_toBottomOf="@+id/textDays" />

    <View
        android:id="@+id/outline"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:background="@color/umd_red"
        app:layout_constraintBottom_toBottomOf="@+id/timeSpinner"
        app:layout_constraintEnd_toEndOf="@+id/timeSpinner"
        app:layout_constraintStart_toStartOf="@+id/timeSpinner"
        app:layout_constraintTop_toTopOf="@+id/timeSpinner" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/timeSpinner"
        app:layout_constraintEnd_toEndOf="@+id/timeSpinner"
        app:layout_constraintStart_toStartOf="@+id/timeSpinner"
        app:layout_constraintTop_toTopOf="@+id/timeSpinner" />

    <Spinner
        android:id="@+id/timeSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/dayButton"
        app:layout_constraintEnd_toEndOf="@+id/textTime"
        app:layout_constraintStart_toStartOf="@+id/textTime"
        app:layout_constraintTop_toTopOf="@+id/dayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>